=======
CHANGES
=======

2.7.0 (unreleased)
------------------

- Remove `zope34` extra, use an older version of z3c.form if you need to
  support pre-ZTK versions.

- Require at least zope.app.container 3.7 for adding support.

- Avoid dependency on ZODB3.

2.6.1 (2012-01-30)
------------------

- Fixed a potential problem where a non-ascii vocabulary/source term value
  could cause the checkbox and readio widget to crash.

- Fixed a problem with the ``datetime.timedelta`` converter, which failed to
  convert back to the field value, when the day part was missing.


2.6.0 (2012-01-30)
------------------

- Remove ":list" from radio inputs, since radio buttons can be only one value
  by definition. See LP580840.

- Changed radio button and checkbox widget labels from token to value (wrapped
  by a unicode conversion) to make it consistent with the parent
  ``SequenceWidget`` class. This way, edit and display views of the widgets
  show the same label. See LP623210.

- Remove dependency on zope.site.hooks, which was moved to zope.component in
  3.8.0 (present in ZTK 1.0 and above).

- Make zope.container dependency more optional (it is only used in tests)

- Properly escape JS code in script tag for the ordered-select widget. See
  LP829484.

- Cleaned whitespace in page templates.

- Fix ``IGroupForm`` interface and actually use it in the ``GroupForm``
  class. See LP580839.

- Added Spanish translation.

- Added Hungarian translation.

2.5.1 (2011-11-26)
------------------

- Better compatibility with Chameleon 2.x.

- Added \*.mo files missing in version 2.5.0.

- Pinned minimum version of test dependency `z3c.template`.

2.5.0 (2011-10-29)
------------------

- Fixed coverage report generator script buildout setup.

- Note: z3c.pt and chameleon are not fully compatible right now with TAL.
  Traversing the repeat wrapper is not done the same way. ZPT uses the
  following pattern:
  <tal:block condition="not:repeat/value/end">, </tal:block>
